--- a/index.html
+++ b/index.html
@@ -4,11 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+#div1 {
+  position: absolute;
+  left: 50px;
+  width: calc(100% - 100px);
+  border: 1px solid black;
+  background-color: yellow;
+  padding: 5px;
+  text-align: center;
+}
+</style>
 </head>
 <body>
     <h2>HTML IMAGE</h2>
     <P> HTML images are defined with the img</P>
     <img src="https://www.pexels.com/photo/white-flowers-in-bloom-2101187/">
+<h1>The calc() Function</h1>
 
+<p>Create a div that stretches across the window, with a 50px gap between both sides of the div and the edges of the window:</p>
+
+<div id="div1">Some text...</div>
 </body>
 </html>
