--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
   padding: 5px;
   text-align: center;
 }
+ #div2 {
+   background-color: yellow;
+   height: 100px;
+   width: max(50%, 300px);
+        }
 </style>
 </head>
 <body>
@@ -25,5 +30,11 @@
 <p>Create a div that stretches across the window, with a 50px gap between both sides of the div and the edges of the window:</p>
 
 <div id="div1">Some text...</div>
+
+    <h1>The Max() Function</h1>
+    <p> Use max() to set the width of #div2 to whichever value is largest, 50% or 300px:</p>
+    <div id="div2">Some text...</div>
+    <p> Resize the browser window to see the effect.</p>
+
 </body>
 </html>
