--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
    height: 100px;
    width: max(50%, 300px);
         }
+#div3 {
+  background-color: yellow;
+  height: 100px;
+  width: min(50%, 300px);
+}
 </style>
 </head>
 <body>
@@ -35,6 +40,16 @@
     <p> Use max() to set the width of #div2 to whichever value is largest, 50% or 300px:</p>
     <div id="div2">Some text...</div>
     <p> Resize the browser window to see the effect.</p>
+
+    
+    <h1>The min() Function</h1>
+
+<p>Use min() to set the width of #div1 to whichever value is smallest, 50% or 300px:</p>
+
+<div id="div3">Some text...</div>
+
+<p>Resize the browser window to see the effect.</p>
+
 
 </body>
 </html>
