--- a/index.html
+++ b/index.html
@@ -4,53 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-#div1 {
-  position: absolute;
-  left: 50px;
-  width: calc(100% - 100px);
-  border: 1px solid black;
-  background-color: yellow;
-  padding: 5px;
-  text-align: center;
-}
- #div2 {
-   background-color: yellow;
-   height: 100px;
-   width: max(50%, 300px);
-        }
-#div3 {
-  background-color: yellow;
-  height: 100px;
-  width: min(50%, 300px);
-}
-</style>
+  
 </head>
 <body>
     <h2>HTML IMAGE</h2>
     <P> HTML images are defined with the img</P>
     <img src="https://www.pexels.com/photo/silhouette-of-people-by-the-seashore-1387037/">
-<h1>The calc() Function</h1>
 
-<p>Create a div that stretches across the window, with a 50px gap between both sides of the div and the edges of the window:</p>
-
-<div id="div1">Some text...</div>
-
-    <h1>The Max() Function</h1>
-    <p> Use max() to set the width of #div2 to whichever value is largest, 50% or 300px:</p>
-    <div id="div2">Some text...</div>
-    <p> Resize the browser window to see the effect.</p>
-
-    
-    <h1>The min() Function</h1>
-
-<p>Use min() to set the width of #div1 to whichever value is smallest, 50% or 300px:</p>
-
-<div id="div3">Some text...</div>
-
-<p>Resize the browser window to see the effect.</p>
-
-
+    <a href="Calc.html"> MATH FUNCTIONS </a>
 </body>
 </html>
 
