--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   
 </head>
 <body>
+    <p><a href="table.html"> Creation of tables using HTML</p>
     <h2>HTML IMAGE</h2>
     <P> HTML images are defined with the img</P>
     <img src="https://www.pexels.com/photo/silhouette-of-people-by-the-seashore-1387037/">
