--- a/table.html
+++ b/table.html
@@ -16,12 +16,12 @@
                     <h3> Other Images by Michele Brooks</h3>
                     <table>
                         <tr>
-                            <td> img scr="https://media.gettyimages.com/id/921707644/photo/mont-saint-michel-normandy-north-western-france-the-mount-at-sunset.jpg?s=612x612&w=0&k=20&c=896CDPqVXkiVrDYR4GS61sfTW4vzpl_0Jc-NiE462Ww="</td>
-                            <td> img scr="https://media.gettyimages.com/id/815791200/photo/mont-saint-michel-normandy-north-western-france-the-mount-and-its-reflection-in-the-water-at.jpg?s=612x612&w=0&k=20&c=5uRbH4I_waP7c31IWnnttdUSnOoY-zZ0BJ1KZVT980I=" </td>
+                            <td> <img src="https://images.pexels.com/photos/7962980/pexels-photo-7962980.jpeg?auto=compress&cs=tinysrgb&h=204&fit=crop&w=228&dpr=1"></td>
+                            <td> <img src="https://media.gettyimages.com/id/815791200/photo/mont-saint-michel-normandy-north-western-france-the-mount-and-its-reflection-in-the-water-at.jpg?s=612x612&w=0&k=20&c=5uRbH4I_waP7c31IWnnttdUSnOoY-zZ0BJ1KZVT980I="></td>
                         </tr>
                         <tr>
-                            <td> img scr="https://media.gettyimages.com/id/626497276/photo/le-mont-saint-michel.jpg?s=612x612&w=0&k=20&c=Kp70WBGP8bmQ0otD0ZpidrLMSHk7Ot0GhqUD3SgkQzI="</td>
-                            <td> img scr="https://media.gettyimages.com/id/457064625/photo/hawaii-maui-iao-valley-state-park.jpg?s=612x612&w=0&k=20&c=4MfP3pP-1xmRDgRSNsnc23hPLLpF9Bd5nOxG4ESy0gE="</td>
+                            <td> <img scr="https://media.gettyimages.com/id/626497276/photo/le-mont-saint-michel.jpg?s=612x612&w=0&k=20&c=Kp70WBGP8bmQ0otD0ZpidrLMSHk7Ot0GhqUD3SgkQzI="></td>
+                            <td> <img scr="https://media.gettyimages.com/id/457064625/photo/hawaii-maui-iao-valley-state-park.jpg?s=612x612&w=0&k=20&c=4MfP3pP-1xmRDgRSNsnc23hPLLpF9Bd5nOxG4ESy0gE="></td>
                         </tr>
                     </table>
                 </td>
