--- a/table.html
+++ b/table.html
@@ -6,7 +6,7 @@
             <table>
                 <tr>
                     <td>
-                        <img src="https://images.pexels.com/photos/9088004/pexels-photo-9088004.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Castle"/>
+                        <img src="https://images.pexels.com/photos/9088004/pexels-photo-9088004.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Castle"  heigtht ="100" width="40"/>
                     </td>
                     <td>
                     <h2> Castle</h2> 
@@ -16,12 +16,12 @@
                     <h3> Other Images by Michele Brooks</h3>
                     <table>
                         <tr>
-                            <td> <img src="https://images.pexels.com/photos/7962980/pexels-photo-7962980.jpeg?auto=compress&cs=tinysrgb&h=204&fit=crop&w=228&dpr=1"></td>
-                            <td> <img src="https://media.gettyimages.com/id/815791200/photo/mont-saint-michel-normandy-north-western-france-the-mount-and-its-reflection-in-the-water-at.jpg?s=612x612&w=0&k=20&c=5uRbH4I_waP7c31IWnnttdUSnOoY-zZ0BJ1KZVT980I="></td>
+                            <td> <img src="https://images.pexels.com/photos/7962980/pexels-photo-7962980.jpeg?auto=compress&cs=tinysrgb&h=204&fit=crop&w=228&dpr=1"   heigtht ="90" width="40"></td>
+                            <td> <img src="https://media.gettyimages.com/id/815791200/photo/mont-saint-michel-normandy-north-western-france-the-mount-and-its-reflection-in-the-water-at.jpg?s=612x612&w=0&k=20&c=5uRbH4I_waP7c31IWnnttdUSnOoY-zZ0BJ1KZVT980I="  heigtht ="90" width="40"></td>
                         </tr>
                         <tr>
-                            <td> <img scr="https://media.gettyimages.com/id/626497276/photo/le-mont-saint-michel.jpg?s=612x612&w=0&k=20&c=Kp70WBGP8bmQ0otD0ZpidrLMSHk7Ot0GhqUD3SgkQzI="></td>
-                            <td> <img scr="https://media.gettyimages.com/id/457064625/photo/hawaii-maui-iao-valley-state-park.jpg?s=612x612&w=0&k=20&c=4MfP3pP-1xmRDgRSNsnc23hPLLpF9Bd5nOxG4ESy0gE="></td>
+                            <td> <img scr="https://media.gettyimages.com/id/626497276/photo/le-mont-saint-michel.jpg?s=612x612&w=0&k=20&c=Kp70WBGP8bmQ0otD0ZpidrLMSHk7Ot0GhqUD3SgkQzI="   heigtht ="90" width="40"></td>
+                            <td> <img scr="https://media.gettyimages.com/id/457064625/photo/hawaii-maui-iao-valley-state-park.jpg?s=612x612&w=0&k=20&c=4MfP3pP-1xmRDgRSNsnc23hPLLpF9Bd5nOxG4ESy0gE="   heigtht ="90" width="40"></td>
                         </tr>
                     </table>
                 </td>
