--- a/tabletags.html
+++ b/tabletags.html
@@ -8,8 +8,13 @@
 <body>
     <table>
         table{
-            border :solid 1pt black;
-        }
+      border: solid 1pt black;
+      border-collapse: collapse;
+    }
+    td{
+      border: solid 1pt black;
+      padding: 10pt;
+    }
         <caption>
             <col class="artistName" />
             <colgroup id ="paintingColumns">
