--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     
     
     <a href="Calc.html"> MATH FUNCTIONS </a>
+    <a href="table.html"> CLICK HERE </a>
+    <a href="tabletags.html"> CLICK HERE TO TO SEE TABLE TAGS</a>
 </body>
 </html>
 
