--- a/tabletags.html
+++ b/tabletags.html
@@ -1,51 +1,45 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+<title>Additional tags </title>
 </head>
 <body>
-    <table>
-        table{
-      border: solid 1pt black;
-      border-collapse: collapse;
-    }
-    td{
-      border: solid 1pt black;
-      padding: 10pt;
-    }
-        <caption>
-            <col class="artistName" />
-            <colgroup id ="paintingColumns">
-                <col />
-                <col />
-            </colgroup> 
-            <thead>
-                <tr>
-                    <th>Title</th>
-                    <th>Artist</th>
-                    <th>Year</th>
-                </tr>
-            </thead>  
-            <tfoot>
-                <tr>
-                    <td colspan="2">Total Number of Paintings</td>
-                    <td> 2</td>
-                  </tr>
-            </tfoot> 
-            <tbody>
-                <tr>
-                    <td>The Dash of Marat</td>
-                    <td>Jacque Luis DAVID</td>
-                </tr>
-                <tr>
-                    <td>Burial at ornans</td>
-                    <td>Gustave Courbet</td>
-                    <td>1849</td>
-                </tr>
-            </tbody>    
-        </caption>
-    </table>
+
+<table border: solid 1pt black>
+  <caption>19th Century French Painting</caption>
+  <col class="artistName"/>
+  <colgroup id="paintingColumns">
+    <col />
+    <col />
+  </colgroup>
+  <thead>
+    <tr></tr>
+      <th>Title</th>
+      <th>Artist</th>
+      <th>Year</th>
+    </tr>
+  </thead>
+
+  <tfoot>
+    <tr>
+      <td colspan="2">Total number of paintings</td>
+      <td>2</td>
+    </tr>
+  </tfoot>
+
+  <tbody>
+    <tr>
+      <td>The death of Marut</td>
+      <td>Yvonne Mathenge</td>
+      <td>1973</td>
+    </tr>
+    <tr>
+      <td>Burial at Onans</td>
+      <td>Burial at Onans</td>
+      <td>1849</td>
+    </tr>
+  </tbody>
+</table>
+
 </body>
 </html>
