--- a/Calc.html
+++ b/Calc.html
@@ -32,7 +32,7 @@
 
 <p>Create a div that stretches across the window, with a 50px gap between both sides of the div and the edges of the window:</p>
 
-<div id="div1">Some text...</div>
+<div id="div1">Some text... height </div>
 
     <h1>The Max() Function</h1>
     <p> Use max() to set the width of #div2 to whichever value is largest, 50% or 300px:</p>
