--- a/Calc.html
+++ b/Calc.html
@@ -32,9 +32,9 @@
 
 <p>Create a div that stretches across the window, with a 50px gap between both sides of the div and the edges of the window:</p>
 
-<div id="div1">Some text... heigtht ="200" width="100" </div>
+<div id="div1">Some text...</div>
 
-    <h1>The Max() Function</h1>
+   <p><h1>The Max() Function</h1></p>
     <p> Use max() to set the width of #div2 to whichever value is largest, 50% or 300px:</p>
     <div id="div2">Some text...</div>
     <p> Resize the browser window to see the effect.</p>
