--- a/tabletags.html
+++ b/tabletags.html
@@ -30,7 +30,7 @@
   <tbody>
     <tr>
       <td>The death of Marut</td>
-      <td>Yvonne Mathenge</td>
+      <td>Gachanja Anitah</td>
       <td>1973</td>
     </tr>
     <tr>
