--- a/Calc.html
+++ b/Calc.html
@@ -5,52 +5,44 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-#div1 {
-  position: absolute;
-  left: 50px;
-  width: calc(100% - 100px);
-  border: 1px solid black;
-  background-color: yellow;
-  padding: 5px;
-  text-align: center;
-}
- #div2 {
-   background-color: yellow;
-   height: 100px;
-   width: max(50%, 300px);
+        #div1 {
+            width: calc(100% - 100px);
+            margin: 20px auto;
+            border: 1px solid black;
+            background-color: yellow;
+            padding: 5px;
+            text-align: center;
         }
-#div3 {
-  background-color: yellow;
-  height: 100px;
-  width: min(50%, 300px);
-}
-</style>
+        #div2 {
+            background-color: yellow;
+            height: 100px;
+            width: max(50%, 300px);
+            margin: 20px auto;
+        }
+        #div3 {
+            background-color: yellow;
+            height: 100px;
+            width: min(50%, 300px);
+            margin: 20px auto;
+        }
+    </style>
 </head>
 <body>
-   
-<h1>The calc() Function</h1>
+    <h1>The calc() Function</h1>
+    <p>Create a div that stretches across the window, with a 50px gap between both sides of the div and the edges of the window:</p>
+    <div id="div1">Some text...</div>
 
-<p>Create a div that stretches across the window, with a 50px gap between both sides of the div and the edges of the window:</p>
-
-<div id="div1">Some text...</div>
-
-   <p><h1>The Max() Function</h1></p>
-    <p> Use max() to set the width of #div2 to whichever value is largest, 50% or 300px:</p>
+    <h1>The max() Function</h1>
+    <p>Use max() to set the width of #div2 to whichever value is largest, 50% or 300px:</p>
     <div id="div2">Some text...</div>
-    <p> Resize the browser window to see the effect.</p>
+    <p>Resize the browser window to see the effect.</p>
 
-    
     <h1>The min() Function</h1>
+    <p>Use min() to set the width of #div3 to whichever value is smallest, 50% or 300px:</p>
+    <div id="div3">Some text...</div>
+    <p>Resize the browser window to see the effect.</p>
 
-<p>Use min() to set the width of #div1 to whichever value is smallest, 50% or 300px:</p>
-
-<div id="div3">Some text...</div>
-
-<p>Resize the browser window to see the effect.</p>
-<a href="math.html">Click Here To Get The Exercise</a>
-
-
+    <a href="math.html">Click Here To Get The Exercise</a>
 </body>
 </html>
-
 
