--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <p><a href="form.html"> CLICK HERE</a></p>
      <p><a href="updatedusiuform.html"> CLICK HERE</a></p>
      <p><a href="usiuform.html"> CLICK HERE</a></p>
-     <p><a href="java.js"> CLICK HERE</a></p>
+     <p><a href="java.html"> CLICK HERE</a></p>
 </body>
 </html>
 
