--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
      <p><a href="updatedusiuform.html"> CLICK HERE</a></p>
      <p><a href="usiuform.html"> CLICK HERE</a></p>
      <p><a href="Java.html"> CLICK HERE</a></p>
-    <p><a href="demoheader.html"> CLICK HERE</a></p>
+    <p><a href="demoheader.html"> JAVASCRIPT IN <HEAD></a></p>
     <p><a href="demobody.html"> CLICK HERE</a></p>
 </body>
 </html>
