--- a/index.html
+++ b/index.html
@@ -25,12 +25,13 @@
 
 
      <p><a href="Premiere.html"> PREMIERE LEGUE </a></p>
-    <p><a href="form.html"> CLICK HERE</a></p>
+    <p><a href="form.html"> CLICK HERE TO SEE RESIN COMPANY FORM </a></p>
      <p><a href="updatedusiuform.html"> CLICK HERE</a></p>
      <p><a href="usiuform.html"> CLICK HERE</a></p>
-     <p><a href="Java.html"> CLICK HERE</a></p>
+     <p><a href="Java.html"> INTRO TO JAVASCRIPT</a></p>
     <p><a href="demoheader.html"> JAVASCRIPT IN <HEAD></a></p>
-    <p><a href="demobody.html"> CLICK HERE</a></p>
+    <p><a href="demobody.html"> JAVASCRIPT IN <BODY></a></p>
+    <p><a href="demoexternal.html"> JAVASCRIPT IN AN EXTERNAL FILE</a></p>
 </body>
 </html>
 
