--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
      <p><a href="updatedusiuform.html"> CLICK HERE</a></p>
      <p><a href="usiuform.html"> CLICK HERE</a></p>
      <p><a href="Java.html"> INTRO TO JAVASCRIPT</a></p>
-    <p><a href="demoheader.html"> JAVASCRIPT IN <HEAD></a></p>
-    <p><a href="demobody.html"> JAVASCRIPT IN <BODY></a></p>
+    <p><a href="demoheader.html"> JAVASCRIPT IN HEAD</a></p>
+    <p><a href="demobody.html"> JAVASCRIPT IN BODY</a></p>
     <p><a href="demoexternal.html"> JAVASCRIPT IN AN EXTERNAL FILE</a></p>
 </body>
 </html>
