--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     <p><a href="demoheader.html"> JAVASCRIPT IN HEAD</a></p>
     <p><a href="demobody.html"> JAVASCRIPT IN BODY</a></p>
     <p><a href="demoexternal.html"> JAVASCRIPT IN AN EXTERNAL FILE</a></p>
+    <p><a href="menu.html"> EatNow Menu</a></p>
 </body>
 </html>
 
